classDiagram
    %% --- COUCHE 1 : POINT D'ENTRÉE ---
    class Main {
        +main(args)
    }

    %% --- COUCHE 2 : INTERFACE UTILISATEUR (UI) ---
    class ConsoleController {
        -GameService gameService
        -InputHandler inputHandler
        -MenuPrinter menuPrinter
        +start()
        -handleFilterByPlayers()
        -handleWeekendSummary()
        -handleRecommendGame()
        -handleUndoLastAction()
        -handleAddGame()
        -handleRemoveGame()
        -handleListGames()
    }

    class InputHandler {
        +askString(prompt)
        +askInt(prompt)
    }

    class MenuPrinter {
        +printMainMenu(isWeekend)
        +printGamesForPlayers()
        +printWeekendSelection()
        +printRecommendation()
        +printDuplicateError()
        +printUndoSuccess()
        +printGames()
        %% ... autres méthodes d'affichage
    }

    %% --- COUCHE 3 : LOGIQUE MÉTIER (LOGIC) ---
    class GameService {
        -IGameRepository repository
        -List~BoardGame~ games
        -UndoManager undoManager
        -DuplicateValidator duplicateValidator
        +addGame(game) boolean
        +removeGame(title) boolean
        +getSortedGames()
        +getWeekendSelection()
        +recommendGame(playerCount)
        +getGamesForPlayerCount(count)
        +undoLastAction() String
        +hasActionsToUndo() boolean
    }

    class DuplicateValidator {
        +isDuplicate(games, title) boolean
        +isValidForAddition(games, newGame) boolean
    }

    class UndoManager {
        -Stack~GameAction~ history
        +recordAction(action)
        +undoLastAction() GameAction
        +hasActionsToUndo() boolean
    }

    class GameAction {
        -ActionType type
        -BoardGame game
        +getType()
        +getGame()
        +getDescription()
    }

    class ActionType {
        <<Enumeration>>
        ADD
        REMOVE
    }

    %% --- COUCHE 4 : DONNÉES (DATA) ---
    class IGameRepository {
        <<Interface>>
        +load() List~BoardGame~
        +save(games)
    }

    class JsonFileRepository {
        -File file
        -ObjectMapper mapper
        +load()
        +save(games)
    }

    class CsvFileRepository {
        -File file
        +load()
        +save(games)
    }

    %% --- LE MODÈLE (Circule partout) ---
    class BoardGame {
        <<Record>>
        +String title
        +int minPlayers
        +int maxPlayers
        +String category
    }

    %% --- RELATIONS ET DÉPENDANCES ---
    
    %% Injection depuis le Main
    Main ..> ConsoleController : Crée
    Main ..> GameService : Crée
    Main ..> JsonFileRepository : Instancie (si .json)
    Main ..> CsvFileRepository : Instancie (si .csv)

    %% Relations UI
    ConsoleController --> GameService : Appelle
    ConsoleController --> InputHandler : Lit
    ConsoleController --> MenuPrinter : Affiche

    %% Relations Logic
    GameService --> IGameRepository : Sauvegarde/Charge
    GameService --> UndoManager : Gère l'historique
    GameService --> DuplicateValidator : Vérifie
    GameService o-- BoardGame : Contient une liste de
    
    %% Relations Undo
    UndoManager o-- GameAction : Stocke dans une pile
    GameAction --> ActionType : Définit le type
    GameAction --> BoardGame : Cible

    %% Relations Data
    JsonFileRepository ..|> IGameRepository : Implémente
    CsvFileRepository ..|> IGameRepository : Implémente